--- a/EcoInsight/.gitignore
+++ b/EcoInsight/.gitignore
@@ -35,3 +35,24 @@ out/
 
 ### VS Code ###
 .vscode/
+
+target/
+build/
+
+release.properties
+
+.gradle/
+build/
+
+.metadata
+.classpath
+.project
+.settings/
+*.launch
+
+*.log
+
+.DS_Store
+Thumbs.db
+
+application-private.yml
