--- a/EcoInsight/src/main/resources/application.yml
+++ b/EcoInsight/src/main/resources/application.yml
@@ -1,3 +1,10 @@
 spring:
   application:
     name: EcoInsight
+  profiles:
+    include: secret
+  mvc:
+    static-path-pattern: /uploads/**
+  web:
+    resources:
+      static-locations: file:uploads/
