--- a/frontend/eco-insight/.gitignore
+++ b/frontend/eco-insight/.gitignore
@@ -22,3 +22,19 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+node_modules/
+dist/
+.vite/
+node_modules/.vite
+.env
+.env.*.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.vscode/
+.idea/
+*.sublime-workspace
+.DS_Store
+Thumbs.db
