진짜진짜마지막

--- a/EcoInsight/src/main/resources/application.yml
+++ b/EcoInsight/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: EcoInsight
   profiles:
-    include: secret
+    include: private
   mvc:
     static-path-pattern: /uploads/**
   web:
