--- a/EcoInsight/src/main/resources/application.yml
+++ b/EcoInsight/src/main/resources/application.yml
@@ -24,7 +24,7 @@ mybatis:
     jdbc-type-for-null: VARCHAR
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: 
-    com.semi.ecoinsignt.member.model.vo,
+    com.semi.ecoinsight.member.model.vo,
     com.semi.ecoinsight.member.model.dto,
     com.semi.ecoinsight.token.model.vo
 logging:
