--- a/frontend/eco-insight/package.json
+++ b/frontend/eco-insight/package.json
@@ -39,7 +39,8 @@
     "react-router-dom": "^7.5.0",
     "styled-components": "^6.1.17",
     "tailwindcss": "^4.1.3",
-    "tiptap-extension-resize-image": "^1.2.1"
+    "tiptap-extension-resize-image": "^1.2.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
