--- a/EcoInsight/src/main/resources/application.yml
+++ b/EcoInsight/src/main/resources/application.yml
@@ -28,6 +28,8 @@ mybatis:
     com.semi.ecoinsight.member.model.dto,
     com.semi.ecoinsight.token.model.vo,
     com.semi.ecoinsight.community.model.vo,
+    com.semi.ecoinsight.auth.model.vo
+
 logging:
   level:
     org.apache.ibatis: DEBUG
