--- a/frontend/eco-insight/package.json
+++ b/frontend/eco-insight/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.8.4",
     "chart.js": "^4.4.9",
     "dayjs": "^1.11.13",
+    "dompurify": "^3.2.5",
     "eco-insight": "file:",
     "hangul-js": "^0.2.6",
     "react": "^19.0.0",
