--- a/EcoInsight/src/main/resources/application.yml
+++ b/EcoInsight/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     static-path-pattern: /uploads/**
   web:
     resources:
-      static-locations: file:/uploads/
+      static-locations: file:uploads/
   servlet:
     multipart:
       max-file-size: 100MB
