--- a/frontend/eco-insight/package.json
+++ b/frontend/eco-insight/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-oauth/google": "^0.12.1",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.3",
     "@tiptap/extension-color": "^2.11.7",
@@ -33,6 +34,7 @@
     "dompurify": "^3.2.5",
     "eco-insight": "file:",
     "hangul-js": "^0.2.6",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
